--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ETLFlowGraph"/>
+	<classpathentry kind="lib" path="C:/Users/Elena/Documents/UPC Barcelona/Thesis/ETLFlowGraph/lib-ext/velocity/velocity-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Elena/Documents/UPC Barcelona/Thesis/ETLFlowGraph/lib-ext/velocity/velocity-1.7-dep.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
