--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ETLFlowGraph"/>
 	<classpathentry kind="lib" path="C:/Users/Elena/Documents/UPC Barcelona/Thesis/ETLFlowGraph/lib-ext/velocity/velocity-1.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Elena/Documents/UPC Barcelona/Thesis/ETLFlowGraph/lib-ext/velocity/velocity-1.7-dep.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Elena/Desktop/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
